added client tracking to this branch of big help

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,6 +1,6 @@
 # Some basic info about your company
-company_name: BIG Folio and NextProof
-from_email: help@bigfolio.com
+company_name: WED Zip
+from_email: help@wedzip.com
 support_phone: 805-504-1126
 
 # Your custom field label
@@ -10,12 +10,9 @@ custom_label: Dog or cat?
 customer_attachments: false
 
 # Where does your contact link go?
-contact: http://www.bigfolio.com/contact
+contact: http://www.wedzip.com/contact
 
 # External links for the top nav section
 nav_links:
-    - website designs: http://www.bigfolio.com/website-designs
-    - company: http://www.bigfolio.com/about
-    - testimonials: http://www.bigfolio.com/testimonials
-    - contact: http://www.bigfolio.com/contact
-    - blog: http://bfstop.bigfolioblog.com/
+    - WED Zip: http://www.wedzip.com
+    - Blog: http://blog.wedzip.com
