--- a/config/config.yml
+++ b/config/config.yml
@@ -1,7 +1,7 @@
 # Some basic info about your company
-company_name: BIG Folio and NextProof
+company_name: A Photo Folio
 from_email: help@aphotofolio.com
-support_phone: 805-504-1126
+support_phone: 917-512-5335
 
 # Your custom field label
 custom_label: Dog or cat?
